<resources>
    <string name="app_name">MovixApp</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="movix">Movix</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Movies</string>
    <string name="view_all">view all</string>
    <string name="people">People</string>
    <string name="view_more">view more</string>
    <string name="new_movies">New movies</string>
    <string name="view_more">view more</string>
    <string name="show_more">show more</string>
    <string name="random_movie">Random movie</string>
    <string name="todo">TODO</string>
    <string name="description">Description</string>
</resources>